# TissueOrigami

./: .gitignore  Contributing.md  Dockerfile  InstallationGuide.md  MeshGenerationInstructions.md  README.md  SampleRun.md  SettingUpCodeOnServer.md  UI-BuildAndRun-Docker.sh  find_pardiso_diffs.py  gmon.out  pardiso_non-pardiso_diffs.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_template.md  feature_template.md
.github/workflows/: BaR_mesh_generation.yml  BaR_no_pardiso.yml  build_and_regression_tests.yml  build_mesh_generation.yml  build_simulation_executable_on_mac.yml  build_ui_tests.yml  macos_runner.yml  mesh_generation_regression_test.yml  mesh_generation_regression_tests.yml  regression_tests.yml  sim_no_pardiso.yml  sim_no_pardiso_regression_test.yml
Archive/140815/: modelinput
Archive/140904/: modelinput
Documentation/: Doxyfile  tmp
Documentation/html/: Analysis_8h_source.html  CellMigration_8h_source.html  GLWidget_8h_source.html  GrowthFunctionBase_8h_source.html  GrowthFunctionTypes_8h_source.html  Lumen_8h_source.html  MainWindow_8h_source.html  ModelInputObject_8h_source.html  MuscleFibre_8h_source.html  MyosinFunction_8h_source.html  NewtonRaphsonSolver_8h_source.html  Node_8h_source.html  Prism_8h_source.html  RandomGenerator_8h_source.html  ReferenceShapeBase_8h_source.html  ShapeBase_8h_source.html  Simulation_8h_source.html  annotated.html  annotated.js  classAnalysis-members.html  classAnalysis.html  classAnalysis.js  classCellMigration-members.html  classCellMigration.html  classCellMigration.js  classGLWidget-members.html  classGLWidget.html  classGLWidget.js  classGridBasedGrowthFunction-members.html  classGridBasedGrowthFunction.html  classGridBasedGrowthFunction.js  classGrowthFunctionBase-members.html  classGrowthFunctionBase.html  classGrowthFunctionBase.js  classLumen-members.html  classLumen.html  classLumen.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  (+83 more)
Documentation/images/: packingForce.eps
Documentation/latex/: annotated.tex  classAnalysis.tex  classCellMigration.tex  classGLWidget.tex  classGridBasedGrowthFunction.tex  classGrowthFunctionBase.eps  classGrowthFunctionBase.tex  classLumen.tex  classMainWindow.tex  classModelInputObject.tex  classMuscleFibres.tex  classMyosinFunction.tex  classNewtonRaphsonSolver.tex  classNode.tex  classPrism.tex  classReferenceShapeBase.tex  classRingGrowthFunction.tex  classShapeBase.eps  classShapeBase.tex  classSimulation.tex  classUniformGrowthFunction.eps  classUniformGrowthFunction.tex  classUniformShapeChangeFunction.tex  classmarkerEllipseBasedShapeChangeFunction.tex  dir_a91615f27caff2615e5e61189ea77e22.tex  hierarchy.tex  packingForce.eps  refman.aux  refman.idx  refman.out  refman.tex  refman.toc
Myriad/: CompilingCode
Samples/: SampleModelIndex.xlsx
Samples/DisplaySave/: MeshFromEndPoint.mesh  Save_Force  Save_GrowthRate  Save_GrowthRedistribution  Save_SpecificElementAndNodeTypes  Save_Summary
Samples/SimulationOnTheGo/: Save_Force  Save_GrowthRate  Save_GrowthRedistribution  Save_PhysicalProp
Samples/VisualiseSmallRectangle/: modelinput_SmallRectangle  smallRectangle.mesh
Scratch/TissueFolding/: Makefile
Scratch/bulkruns/: Submitter.sh
TF-OutputMismatchExperiments/: file_comparisons.py  read-and-compare.py  simOutputsToTxt.cpp  ubuntu-bin  ubuntu-bin-out.txt  write_binary.cpp
TissueFolding/: .cproject  Dockerfile  Installation_Tips  Makefile  TissueFolding-Docker.pro  TissueFolding.pro  TissueFoldingProForMyriad  modelinput  modelinput1  modelinput111  modelinput~  myriad_build_instructions  readme.md
TissueFolding/Release/: makefile  sources.mk
TissueFolding/SourceCode/: Analysis.cpp  Analysis.h  ArgumentParserSimulation.cpp  ArgumentParserSimulation.h  CMakeLists-Pardiso.txt  CMakeLists.txt  CellMigration.cpp  GrowthFunctionBase.h  GrowthFunctionTypes.h  Lumen.cpp  Lumen.h  ModelInputObject.cpp  ModelInputObject.h  MyosinFunction.h  NewtonRaphsonSolver.cpp  NewtonRaphsonSolver.h  NewtonRapsonSolver.cpp  NewtonRapsonSolver.h  Node.cpp  Node.h  Prism.cpp  Prism.h  PrismLateral.cpp  PrismLateral.h  ReferenceShapeBase.cpp  ReferenceShapeBase.h  ShapeBase.cpp  ShapeBase.h  Simulation.cpp  Simulation.h  SimulationArgumentReader.cpp  SimulationArgumentReader.h  Tetrahedron.cpp  Tetrahedron.h  TimeSeriesPhysicalProperties.cpp  TimeSeriesPhysicalProperties.h  Triangle.cpp  Triangle.h  YoungsModulusModifier.cpp  YoungsModulusModifier.h  (+3 more)
TissueFolding/SourceCode/aaa/: modelinput00071  modelinput00072  modelinput00073  modelinput00075  modelinput00077  modelinput00078  modelinput00079  modelinput00083  modelinput00084  modelinput00086  modelinput00087  modelinput00088  modelinput00089
TissueFolding/run07008/: MeshFromEndPoint.mesh  Out  Save_Frame  Save_Growth  Save_NodeBinding  Save_PhysicalProp  TissueFolding  modelinput07008
ToolBox/: growthInformation.xlsx
ToolBox/GrowtRates/: 1Growth_48-72hr_0_0_1_1_2  1Growth_48-72hr_0_0_1_4_2  ECMPouch-2foldin48hr-48-72  (+273 more)
ToolBox/MeshGeneration/2DEllipse/src/: 100313-EllipseFromOutline.cpp  ArgumentParser.cpp  ArgumentParser.hpp  ArgumentReader.cpp  ArgumentReader.hpp  ArgumentSpace.cpp  ArgumentSpace.hpp  CMakeLists.txt  EllipseFromOutline  EllipseFromOutline.cpp  EllipseFromOutline.hpp.in  EllipseFromOutlineBKP.cpp  generateTriangleBasedAreaConstraints.cpp  readme.md  refinementExecutionScript  refinementExecutionScriptNew
UserInterface/: .cproject  Makefile  TissueFoldingUI-Docker.pro  TissueFoldingUI.pro  gmon.out  readme.md
UserInterface/SourceCode/: CMakeLists.txt  ElementBasicDisplay.cpp  ElementBasicDisplay.h  ElementPropertiesUI.cpp  ElementPropertiesUI.h  ElementPropertySelection.cpp  ElementPropertySelection.h  GLWidget.cpp  GLWidget.h  GUIArgumentReader.cpp  GUIArgumentReader.h  GUIBuildingBlocks.cpp  GUIBuildingBlocks.h  MainWindow.cpp  MainWindow.h  PropertyDisplayLayout.cpp  PropertyDisplayLayout.h  TissueFolding_GUI_elements.cpp  TissueFolding_GUI_elements.h  main.cpp
tests/: py-requirements.txt  readme.md  simOutputsToTxt.cpp  test_regression.py
(+1222 files in other folders)
